# LPCNet

./: .travis.yml  CMakeLists.txt  Makefile  README.md  process.sh  train_direct.sh  train_pred1.sh  train_pred2.sh
.github/workflows/: cmake.yml
src/: 4stage_direct_split_indopt_vq.c  4stage_direct_split_vq.c  4stage_pred_vq.c  700c_train.sh  CMakeLists.txt  codec2_pitch.c  codec2_pitch.h  common.h  compare_states.m  concat.sh  design_huffman.m  diff32.c  dump_data.c  dump_lpcnet.py  ext_pitch.sh  flac_to_wav.sh  flat.m  freq.c  freq.h  full_train.sh  idct.c  linux_v_windows.m  linux_v_windows.sh  load_f32.m  lpcnet.c  lpcnet.h  lpcnet.py  lpcnet_dec.c  lpcnet_dump.c  lpcnet_dump.h  lpcnet_enc.c  lpcnet_freedv.c  lpcnet_freedv.h  lpcnet_freedv_internal.h  lpcnet_quant.c  lpcnet_quant.h  mbest.c  mbest.h  nnet.c  nnet.h  (+42 more)
src/from_codec2/: CMakeLists.txt  codec2_fft.c  codec2_renames.h  kiss_fft.c  kiss_fftr.c  nlp.c  sine.c
unittest/: birch_190727e_targ.raw  birch_20h_states_targ.f32  birch_20h_targ.raw  birch_mag.f32  birch_out_targ.raw  birch_states_targ.f32  birch_targ.f32  c01_01_190804a_targ.raw  c01_01_mag.f32  test_core_nn.sh  test_core_nn.sh.in  test_dump_data.sh
